# pdf-benchmark

./: .gitignore  README.md  ai.py  config.py  creator.py  hello.py  instructions.py  main.py  pyproject.toml
data/nov24/consulting/: consulting_3-n3aIPFvOHGbU3IA_0_h.csv  consulting_3_vakQ_JFvut4FsdsAwsn.csv  consulting_6WPHBRTKcBTB4JPIM8G4a.csv  consulting_Efyj2bNbPrWvQXzNO682b.csv  consulting_Ro8UcIFtJ5PYNvTUhrGJB.csv  consulting_SSujAdX4nGOlke3PPSQrg.csv  consulting_SqaHWfZI5nxK0qoltKkiD.csv  consulting_T69bNbkZBXCvdNbyZZSqI.csv  consulting_ZWzhIpCiineU6C_RFjE9L.csv  consulting_kTBcZa8dd3tAt7-RAOCQj.csv  processed_ids.csv
data/nov24/education/: education_1_RX4V2dd3Hsi5kLfgpfG.csv  education_257mCNl7zzPcQxcQSnkg2.csv  education_BEa_m3ggkfoK1n5BqWe2m.csv  education_Jgp96PyavsVDDjynZrxOh.csv  education_UNI88PwL_1g7MOYP_PcEl.csv  education_bJCdFPRU2fmb5jdzn-lrX.csv  education_kV7-gM4u0Qlj_X-lXjuQq.csv  education_njjyh_TKEeyKG5l0pfyiy.csv  education_r6Bde9CudNT5sKJaZCHJm.csv  education_vXw6nD3mk1uyPNqywfyVK.csv  processed_ids.csv
data/nov24/finance/: finance_JE0gkCkTJMjGftNWTaX8m.csv  finance_Nfk3KBbsysaa0ntlzAA1F.csv  finance_OewpyaJTJPsJiBjMg-z27.csv  finance_XrohqKtvjGjBNA8jhz8Hw.csv  finance_bJcUP78y2FytYj18Vqny3.csv  finance_e6IpF1O-yI4g1kE7LtdSj.csv  finance_jZjRZlodorK2Qq44VtUYB.csv  finance_kJOAhs8c-J4WQ_gGDxmYa.csv  finance_sHYz424C13x3YQmmauVEK.csv  finance_tBjnvOsTinpc30WN8qxNR.csv  processed_ids.csv
data/nov24/government/: government_FJDyGes7jHBNunspMeZ_N.csv  government_InGQ0ggcJ1kCYNDWnbyk8.csv  government_LPaVi3_ZbyjjZ947ybb4r.csv  processed_ids.csv  (+7 more)
(+66 files in other folders)
